--- a/scss/components/UI/__main-nav.scss
+++ b/scss/components/UI/__main-nav.scss
@@ -81,9 +81,19 @@
    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.108);
    @include transition();
 
+   @media screen and (max-width: $bp-MD){
+      overflow: hidden;
+   }
+
    @media screen and (max-width: $bp-LG) {
       position: relative;
       opacity: 1;
+   }
+
+   &.active{
+      @media screen and (max-width: $bp-MD){
+         overflow: visible;
+      }
    }
 
    &.sticky {
@@ -167,6 +177,11 @@
       transition: all 0.5s ease-in-out;
       padding: 40px 30px 40px 60px;
 
+      @media screen and (max-width: 340px){
+         width: 290px;
+         height: 330px;
+      }
+
       @media screen and (max-width: $bp-MD) {
          transition: all 0.3s ease-in-out;
       }
@@ -182,6 +197,10 @@
          text-transform: uppercase;
          margin-bottom: 10px;
          @include transition();
+
+         @media screen and (max-width: 340px){
+            font-size: 15px;
+         }
 
          &:hover {
             padding-left: 10px;
